www/css/style.css
html, body
{
	font-family: 'Short Stack', cursive;
}

/* Empty. Add your own CSS if you like */
div.centered
{
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

div.deck-card
{
	width: 110%;
	border-radius: 5px;
}

div.deck-card-preview
{
	width: 97%;
}

div.card-add-controls
{
	float: left;
	width: 20%;
}

div.card-preview-small
{
	width: 80%;
	margin-left: auto;
	margin-right: auto;
	border: solid 1px #ccc;
	border-radius: 10px;
	padding: 5px;
	float: left;
	background: #FFF;	
}

div.card-preview-gallery
{
	float: left;
	margin-right: 3%;
	margin-bottom: 20px;
	width: 47%;		
}


img.card-preview
{
	width: 100%;
	max-height: 35vh;
}

h2.card-preview, h3.card-preview, h4.card-preview
{
	width: 100%;
	text-align: center;
	margin-top: 0px;
	margin-bottom: 20px;
}

div.add-card-count
{
	width: 100%;
	text-align: center;
	border-bottom: solid 1px #ccc;
	padding-bottom: 10px;
	margin-bottom: 5px;	
}

div.card-player-image
{
	width: 100vw;
	height: 70vh;	
	overflow: hidden;
}

img.card-player
{
	width: 100%;
	height: 100%;
}


/* Overridden ionic framework classes */
.deck-search
{
	font-family: 'Short Stack', cursive;
}

.card-preview-small h4
{
	font-family: 'Short Stack', cursive;
}

.card-preview-small input
{
	padding-left: 10px;
	font-family: 'Short Stack', cursive;
}

.capture-text
{
	width: 80%;
	float: left;
	margin-right: 10px;
	margin-left: 3%;
}

button
{
	font-family: 'Short Stack', cursive;
	
}

.title
{
	font-family: 'Short Stack', cursive;
}

h2.card-preview
{
	font-family: 'Short Stack', cursive;
}

div.home-footer
{
	position: fixed;
    bottom: -10px;
}

div.deck-list-header
{
	width: 100%;
	text-align: right;
}

div.deck-title-header
{
	float: left;
}

div.deck-title-header h2
{
	font-family: 'Short Stack', cursive;	
}

div.deck-title-img
{
	float: left;
	
}

ion-item.menu-list-item
{
	background-color: #FBC1C5;
}

div.deck-list-item-header
{
	background-color: #FFF7C4;		
}

div.deck-list-item-footer
{
	background-color: #FFFADD;
}

div.deck-card-footer-actions
{
	width: 50%;
	float: left;
	text-align: right;
}

div.deck-card-footer
{
	width: 50%;
	float: left;
	padding-top: 0.5em;
	font-size: 0.75em;
}

div.home-button
{
	background-image: url(../img/home-button.png);
	background-size: contain;
	background-repeat: no-repeat;
	width: 45vw;
	height: 17vh;
	margin-left: auto;
	margin-right: auto;	
}

img.home-top, img.home-bottom
{
	width: 105vw;
	margin-left: -4vw;
}

ion-content.plain, ion-modal-view.plain
{
	background-color: #B3E0F6;	
}

h1.player-title, ion-header-bar.player-title
{
	background-color: #FFF7C4;
}


ion-content.striped
{
	/*
	background: #fefcea;
	background: -moz-linear-gradient(top, #fefcea 0%, #f1da36 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefcea), color-stop(100%,#f1da36));
	background: -webkit-linear-gradient(top, #fefcea 0%,#f1da36 100%);
	background: -o-linear-gradient(top, #fefcea 0%,#f1da36 100%);	
	background: -ms-linear-gradient(top, #fefcea 0%,#f1da36 100%);
	background: linear-gradient(to bottom, #fefcea 0%,#f1da36 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', endColorstr='#f1da36',GradientType=0 );
	*/
	background-image: url(../img/blue-stripe.png);	
}

.deck-list-item div.item-content
{
	background-color:rgba(0,0,0,0);
}


.deck-list .item-divider, .deck-card-preview .item-divider
{
	background-color: #64E86F;
}

.deck-card .item-divider h2
{
	color: #FFF;
	font-weight: bold;
	font-family: 'Short Stack', cursive;
}

.add-deck .item
{
	border: none;	
}

.add-deck input, .add-deck textarea
{
	padding-left: 10px;
	font-family: 'Short Stack', cursive;
}

.deck-list ion-item.deck-list-item
{
	border-style: none;
	background-color:rgba(0,0,0,0);
}

.deck-list .item-complex .item-content
{
	padding: 0px 45px 0px 15px;
}

